--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "animate.css": "^4.1.1",
     "canvas-confetti": "^1.9.3",
     "flowbite-react": "^0.10.2",
+    "framer-motion": "^12.6.5",
     "gsap": "^3.12.7",
     "intl-tel-input": "^25.3.0",
     "lottie-react": "^2.4.1",
+    "lucide-react": "^0.487.0",
     "next": "15.1.6",
     "next-seo": "^6.6.0",
     "react": "^18.3.1",
